welcome.lessons.welcome.bat.bool1.Diff21.scala.code
def diff21(n:Int): Int = {
var s=0
if(n<21) {
s=n-21
Math.abs(s)
}
else  {
s=n-21
Math.abs(s)
s=(2*s)}
}